--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="story/jscex-parser.js"></script>
     <script type="text/javascript" src="story/jscex-jit.js"></script>
     <script type="text/javascript" src="story/jscex-builderbase.js"></script>
-    <script type="taext/javascript" src="story/jscex-async.js"></script>
+    <script type="text/javascript" src="story/jscex-async.js"></script>
     <script type="text/javascript" src="story/jscex-async-powerpack.js"></script>
     <script type="text/javascript" src="story/functions.js" charset="utf-8"></script>
     <script type="text/javascript" src="story/love.min.js" charset="utf-8"></script>
