--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <audio autoplay="autopaly">
-        <source src="The Only One.mp3" audio/mp3" />
+        <source src="bgm.mp3" audio/mp3" />
     </audio>
     <div id="main">
         <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a
